// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Badge /> matches snapshot with badge content 1`] = `
<div>
  <div
    class="my-class css-182rk42-container-container"
    id="my-id"
  >
    <span
      class="content-container"
    >
      5
    </span>
    Messages
  </div>
</div>
`;

exports[`<Badge /> matches snapshot without badge content 1`] = `
<div>
  <div
    class="my-class css-182rk42-container-container"
    id="my-id"
  >
    <span
      class="content-container"
    />
    Messages
  </div>
</div>
`;
